# IIIT-BBSR-healing-pavillion

./: README.md
pred-healing-plat-onchain/: .gitignore  Anchor.toml  hj
pred-healing-plat-onchain/programs/pred-healing-plat-onchain/: Cargo.toml
pred-healing-plat-onchain/programs/pred-healing-plat-onchain/src/: lib.rs
pred-healing-plat-onchain/tests/: pred-healing-plat-onchain.ts
